--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 						<div class="col-xs-12 text-center">
 							<img src="img/Logo.png" alt="">
 							<p>Frontend Develper. Building at <a href="#">ThoughtFocus Technologies</a>.Previously at<a href="#">KapGan Technologies</a></p>
-							<button type="button" class="btn btn-lg btn-primary">Find Out More</button>
-							<button type="button" class="btn btn-lg btn-default">Contact</button>
+							<button type="button" class="btn btn-lg btn-primary">Learn More</button>
+							<button type="button" class="btn btn-lg btn-default">Get In Touch</button>
 							<div class="down-button">
 								<a href="#about" class="btn">
 									<i class="fa fa-arrow-circle-down fa-4x"></i>
@@ -57,25 +57,66 @@
 		</section>
 
 		<section class="row content-filler" id="about">
+
+		
 		</section>
 
 		<section class="row">
 			<div class="fill-screen fixed-attachment" style="background-image: url(img/background1.jpg)"></div>
 		</section>
 		<section class="row content-filler" id="work">
+			
+		</section>
+		<section class="row content-filler" id="contact">
+			<div class="container text-center">
+				<div class="row contact-heading">
+					<div class="col-xs-12 ">
+						<h3>Contact Us</h3>
+					</div>
+				</div>
+				<div class="row title-row contact-form">
+					<div class="col-xs-12 ">
+						<h4>SEND US A MESSAGE</h4>
+						<div class="col-xs-6 contact-input">
+							<div class="form-group">
+							    <input type="text" class="form-control" placeholder="Full Name">
+							</div>
+							<div class="form-group">
+							    <input type="email" class="form-control" placeholder="Email">
+							</div>
+							<div class="form-group">
+							    <input type="text" class="form-control" placeholder="Subject">
+							</div>
+						</div>
+						<div class="col-xs-6 contact-input">
+							<textarea class="form-control" rows="5" placeholder= "Your question"></textarea>
+						</div>
+					</div>
+				</div>
+				<div class="row contact-form">
+					<div class="col-xs-12 text-right">
+						<button type="button" class="btn btn-md btn-primary">Learn More</button>
+					</div>
+				</div>
+			</div>	
 		</section>
 	</div>
+	<footer class="navbar navbar-inverse navbar-static-bottom">
+	</footer>
+
+
 	<script src="js/jquery-1.11.3.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/classie.js"></script>
 	<script src="js/cbpAnimatedHeader.js"></script>
 	<script>
-	$(window).on("load resize", function(){
+	/*$(window).on("load resize", function(){
 		$(".fill-screen").css("height",window.innerHeight);
-	});
+	});*/
 	$("body").scrollspy({
 		target: ".navbar"
 	});
+	
 	</script>
 </body>
 </html>
