--- a/index.html
+++ b/index.html
@@ -109,14 +109,20 @@
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/classie.js"></script>
 	<script src="js/cbpAnimatedHeader.js"></script>
+	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js "></script>
 	<script>
-	/*$(window).on("load resize", function(){
+	$(window).on("load resize", function(){
 		$(".fill-screen").css("height",window.innerHeight);
-	});*/
+	});
 	$("body").scrollspy({
 		target: ".navbar"
 	});
-	
+	$("nav a").bind("click", function(){
+		$("html, body").stop().animate({
+				scrollTop: $($(this).attr("href")).offset().top
+		},1500,'easeInOutExpo');
+		event.preventDefault();
+	});
 	</script>
 </body>
 </html>
