--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		  </div><!-- /.container-fluid -->
 		</nav>
 	</header>
-	<div class="container-fluid">
+	<div class="container-fluid portfolio-body">
 		<section class="row">
 			<div class="fill-screen" style="background-image: url(img/background-dark.jpg)">
 				<div class="container">
@@ -57,8 +57,49 @@
 		</section>
 
 		<section class="row content-filler" id="about">
-
-		
+			<div class="col-md-12">
+				<div class="container">
+					<div class="row contact-heading">
+						<div class="col-xs-12 text-center">
+							<h3>Skills</h3>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-sm-6 col-lg-4">
+							<div class="skills skills-1 text-center">
+								<span>HTML5<br />70%</span>
+							</div>
+						</div>
+						<div class="col-sm-6 col-lg-4">
+							<div class="skills skills-2 text-center">
+								<span>CSS3<br />70%</span>
+							</div>
+						</div>
+						<div class="col-sm-6 col-lg-4">
+							<div class="skills skills-3 text-center">
+								<span>Bootstrap3<br />90%</span>
+							</div>
+						</div>
+					
+						<div class="col-sm-6 col-lg-4">
+							<div class="skills skills-4 text-center">
+								<span>Javascript<br />60%</span>
+							</div>
+						</div>
+						<div class="col-sm-6 col-lg-4">
+							<div class="skills skills-5 text-center">
+								<span>jQuery<br />85%</span>
+							</div>
+						</div>
+						<div class="col-sm-6 col-lg-4">
+							<div class="skills skills-6 text-center">
+								<span>Less<br />80%</span>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			
 		</section>
 
 		<section class="row">
@@ -77,7 +118,7 @@
 				<div class="row title-row contact-form">
 					<div class="col-xs-12 ">
 						<h4>SEND US A MESSAGE</h4>
-						<div class="col-xs-6 contact-input">
+						<div class="col-sm-6 contact-input">
 							<div class="form-group">
 							    <input type="text" class="form-control" placeholder="Full Name">
 							</div>
@@ -88,7 +129,7 @@
 							    <input type="text" class="form-control" placeholder="Subject">
 							</div>
 						</div>
-						<div class="col-xs-6 contact-input">
+						<div class="col-sm-6 contact-input">
 							<textarea class="form-control" rows="5" placeholder= "Your question"></textarea>
 						</div>
 					</div>
