--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
+
+	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/font-awesome.min.css">
 </head>
 <body>
 	<header id="top">
@@ -19,7 +21,7 @@
 		        <span class="icon-bar"></span>
 		        <span class="icon-bar"></span>
 		      </button>
-		      <a href="#"><img src="img/Logosmall.png"></a>
+		      <a href="#" class="brand">Tushar Mehrotra</a>
 		    </div>
 
 		    <!-- Collect the nav links, forms, and other content for toggling -->
@@ -37,12 +39,12 @@
 	</header>
 	<div class="container-fluid portfolio-body">
 		<section class="row">
-			<div class="fill-screen" style="background-image: url(img/background-dark.jpg)">
+			<div class="fill-screen" style="background-image: url(img/back1.jpg)">
 				<div class="container">
 					<div class="row title-row">
 						<div class="col-xs-12 text-center">
-							<img src="img/Logo.png" alt="">
-							<p>Frontend Develper. Building at <a href="#">ThoughtFocus Technologies</a>.Previously at<a href="#">KapGan Technologies</a></p>
+							<h3>Tushar Mehrotra</h3>
+							<p>Frontend Develper. Building at <a href="#">ThoughtFocus Technologies</a>.Previously at <a href="#">KapGan Technologies</a></p>
 							<button type="button" class="btn btn-lg btn-primary">Learn More</button>
 							<button type="button" class="btn btn-lg btn-default">Get In Touch</button>
 							<div class="down-button">
@@ -103,7 +105,19 @@
 		</section>
 
 		<section class="row">
-			<div class="fill-screen fixed-attachment" style="background-image: url(img/background1.jpg)"></div>
+			<div class="fill-screen fixed-attachment" style="background-image: url(img/background11.jpg)">
+				<div class="container">
+					<div class="row title-row">
+						<div class="col-xs-12 text-center">
+							<div class="row contact-heading">
+								<div class="col-xs-12 text-center">
+									<h3>Work</h3>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</section>
 		<section class="row content-filler" id="work">
 			
@@ -152,9 +166,9 @@
 	<script src="js/cbpAnimatedHeader.js"></script>
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js "></script>
 	<script>
-	$(window).on("load resize", function(){
+	/*$(window).on("load resize", function(){
 		$(".fill-screen").css("height",window.innerHeight);
-	});
+	});*/
 	$("body").scrollspy({
 		target: ".navbar"
 	});
