Responsive meta tag added

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Portfolio</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
-
+	
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/style.css">
@@ -150,7 +151,7 @@
 				</div>
 				<div class="row contact-form">
 					<div class="col-xs-12 text-right">
-						<button type="button" class="btn btn-md btn-primary">Learn More</button>
+						<button type="button" class="btn btn-md btn-primary">Send</button>
 					</div>
 				</div>
 			</div>	
