--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=500,initial-scale=1.0,maximum-scale=1">
 	<title>Document</title>
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
 
@@ -10,6 +11,7 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+	
 	<header id="top">
 		<nav class="navbar navbar-inverse navbar-fixed-top cbp-af-header">
 		  <div class="container-fluid">
@@ -105,7 +107,7 @@
 		</section>
 
 		<section class="row">
-			<div class="fill-screen fixed-attachment" style="background-image: url(img/background11.jpg)">
+			<div class="fill-screen fixed-attachment" style="background-image: url(img/background11.jpg); background-color: '#ce494a';">
 				<div class="container">
 					<div class="row title-row">
 						<div class="col-xs-12 text-center">
@@ -150,7 +152,7 @@
 				</div>
 				<div class="row contact-form">
 					<div class="col-xs-12 text-right">
-						<button type="button" class="btn btn-md btn-primary">Learn More</button>
+						<button type="button" class="btn btn-md btn-primary">Send</button>
 					</div>
 				</div>
 			</div>	
@@ -174,7 +176,7 @@
 	});
 	$("nav a").bind("click", function(){
 		$("html, body").stop().animate({
-				scrollTop: $($(this).attr("href")).offset().top
+				scrollTop: $($(this).attr("href")).offset().top-55
 		},1500,'easeInOutExpo');
 		event.preventDefault();
 	});
