--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		        <span class="icon-bar"></span>
 		        <span class="icon-bar"></span>
 		      </button>
-		      <a href="#" class="brand animated fadeInLeft">Tushar Mehrotra</a>
+		      <a href="#top" class="brand animated fadeInLeft">Tushar Mehrotra</a>
 		    </div>
 
 		    <!-- Collect the nav links, forms, and other content for toggling -->
@@ -50,8 +50,8 @@
 						<div class="col-xs-12 text-center">
 							<h3>Tushar Mehrotra</h3>
 							<p>Frontend Develper. Building at <a href="#">ThoughtFocus Technologies</a>.Previously at <a href="#">KapGan Technologies</a></p>
-							<button type="button" class="btn btn-lg btn-primary">Learn More</button>
-							<button type="button" class="btn btn-lg btn-default">Get In Touch</button>
+							<a type="button" class="btn btn-lg btn-primary">Learn More</a>
+							<a type="button" href="#contact" class="btn btn-lg btn-default">Get In Touch</a>
 							<div class="down-button">
 								<a href="#about" class="btn down-arrow">
 									<i class="fa fa-arrow-circle-down fa-4x"></i>
@@ -129,6 +129,7 @@
 			
 		</section>
 		<section class="row content-filler" id="contact">
+			
 			<div class="container text-center">
 				<div class="row contact-heading">
 					<div class="col-xs-12 ">
@@ -180,7 +181,7 @@
 		target: ".navbar",
 		offset: 160
 	});
-	$("nav a, .down-arrow, a.brand").bind("click", function(){
+	$("nav a, .down-arrow, a.brand, a.btn-default").bind("click", function(){
 		$("html, body").stop().animate({
 				scrollTop: $($(this).attr("href")).offset().top-55
 		},1500,'easeInOutExpo');
