--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 
-	<meta name="viewport" content="width=500,initial-scale=1.0,maximum-scale=1">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1">
 	
 	<title>Portfolio</title>
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
@@ -125,7 +125,7 @@
 			</div>
 		</section>
 		
-		<section class="row fill-screen" id="Blog">
+		<section class="row fill-screen" id="Blog" style="background:#f7f7f7;">
 			
 		</section>
 		<section class="row content-filler" id="contact">
