--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		      	<li><a href="#top" >Home</a></li>
 		        <li><a href="#about" >About</a></li>
 		        <li><a href="#work">Work</a></li>
-		        <li><a href="#Blog">Blog</a></li>
+		        <li><a href="#portfolio">Portfolio</a></li>
 		        <li><a href="#contact">Contact</a></li>
 		      </ul>
 		    </div><!-- /.navbar-collapse -->
@@ -44,12 +44,19 @@
 	</header>
 	<div class="container-fluid portfolio-body">
 		<section class="row">
-			<div class="fill-screen" style="background-image: url(img/back1.jpg)">
+			<div class="fill-screen info" style="background-image: url(img/back1.jpg)">
 				<div class="container">
 					<div class="row title-row">
 						<div class="col-xs-12 text-center">
 							<h3>Tushar Mehrotra</h3>
 							<p>Frontend Develper. Building at <a href="#">ThoughtFocus Technologies</a>.Previously at <a href="#">KapGan Technologies</a></p>
+							<div class="icon">
+							<a href=""><i class="fa fa-facebook-square fa-2x"></i></a>
+							<a href="http://codepen.io/MTushar"><i class="fa fa-codepen fa-2x"></i></a>
+							<a href=""><i class="fa fa-twitter-square fa-2x"></i></a>
+							<a href="https://github.com/MeTushar"><i class="fa fa-github-square fa-2x"></i></a>
+							<a href=""><i class="fa fa-google-plus-square fa-2x"></i></a>
+							</div>
 							<a type="button" class="btn btn-lg btn-primary">Learn More</a>
 							<a type="button" href="#contact" class="btn btn-lg btn-default">Get In Touch</a>
 							<div class="down-button">
@@ -125,8 +132,27 @@
 			</div>
 		</section>
 		
-		<section class="row fill-screen" id="Blog" style="background:#f7f7f7;">
-			
+		<section class="row fill-screen" id="portfolio" style="background:#ECF0F1;">
+			<div class="container">
+				<div class="row title-row">
+					<div class="col-xs-12 text-center">
+						<div class="row contact-heading">
+							<div class="col-xs-12 text-center">
+								<h3 class="portfolio">Portfolio</h3>
+							</div>
+						</div>
+						<div class="col-sm-6 col-md-4">
+							<img src="img/project-11.jpg"class=""> 
+						</div>
+						<div class="col-sm-6 col-md-4">
+							<img src="img/project-22.jpg"class="">
+						</div>
+						<div class="col-sm-6 col-md-4">
+							<img src="img/project-33.jpg"class="">
+						</div>
+					</div>
+				</div>
+			</div>
 		</section>
 		<section class="row content-filler" id="contact">
 			
@@ -164,6 +190,13 @@
 		</section>
 	</div>
 	<footer class="navbar navbar-inverse navbar-static-bottom">
+		<div class="container text-center">
+			<a href=""><i class="fa fa-facebook-square fa-2x"></i></a>
+			<a href="http://codepen.io/MTushar"><i class="fa fa-codepen fa-2x"></i></a>
+			<a href=""><i class="fa fa-twitter-square fa-2x"></i></a>
+			<a href="https://github.com/MeTushar"><i class="fa fa-github-square fa-2x"></i></a>
+			<a href=""><i class="fa fa-google-plus-square fa-2x"></i></a>
+		</div>
 	</footer>
 
 
