--- a/index.html
+++ b/index.html
@@ -254,25 +254,26 @@
 						</div>
 						<div class="col-sm-6 col-md-3">
 							<div class="portfolio-inner" >
-							<img src="img/project-22.jpg"class="work">
+							<img src="img/project-44.jpg"class="work">
 							<div class="overlay" >
-								<a href="http://metushar.github.io/Project" class="btn btn-primary btn-attached"><i class="fa fa-link"></i></a>
+								<a href="http://metushar.github.io/Photo-Sharing-website-" class="btn btn-primary btn-attached"><i class="fa fa-link"></i></a>
 							</div>
 							</div>
 							<!-- <img src="img/project-22.jpg"class=""> -->
 						</div>
 						<div class="col-sm-6 col-md-3">
 							<div class="portfolio-inner" style="background: #84dcc6;">
-							<div class="work"></div>
+							
+							<img src="img/project-22.jpg"class="work"> 
 							<div class="overlay" >
-								<a href="" class="btn btn-primary btn-attached"><i class="fa fa-link"></i></a>
+								<a href="http://metushar.github.io/Project" class="btn btn-primary btn-attached"><i class="fa fa-link"></i></a>
 							</div>
 							</div>
-							<!-- <img src="img/project-33.jpg"class=""> -->
+							
 						</div>
 						<div class="col-sm-6 col-md-3">
 							<div class="portfolio-inner" style="background: #84dcc6;">
-							<div class="work"></div>
+							<div class="work"></div> 
 							<div class="overlay" >
 								<a href="" class="btn btn-primary btn-attached"><i class="fa fa-link"></i></a>
 							</div>
