--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 		    <!-- Collect the nav links, forms, and other content for toggling -->
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		      <ul class="nav navbar-nav navbar-right">
-		      	<li><a href="#top" >Home</a></li>
+		      	<li class="active"><a href="#top" >Home</a></li>
 		        <li><a href="#about" >About</a></li>
 		        <li><a href="#work">Work</a></li>
 		        <li><a href="#portfolio">Portfolio</a></li>
@@ -264,18 +264,18 @@
 						<div class="col-sm-6 col-md-3">
 							<div class="portfolio-inner" style="background: #84dcc6;">
 							
-							<img src="img/project-22.jpg"class="work"> 
+							<img src="img/project-55.jpg"class="work">
 							<div class="overlay" >
-								<a href="http://metushar.github.io/Project" class="btn btn-primary btn-attached"><i class="fa fa-link"></i></a>
+								<a href="http://metushar.github.io/Business-website" class="btn btn-primary btn-attached"><i class="fa fa-link"></i></a>
 							</div>
 							</div>
 							
 						</div>
 						<div class="col-sm-6 col-md-3">
 							<div class="portfolio-inner" style="background: #84dcc6;">
-							<div class="work"></div> 
+							<img src="img/project-22.jpg"class="work">
 							<div class="overlay" >
-								<a href="" class="btn btn-primary btn-attached"><i class="fa fa-link"></i></a>
+								<a href="http://metushar.github.io/Project" class="btn btn-primary btn-attached"><i class="fa fa-link"></i></a>
 							</div>
 							</div>
 							<!-- <img src="img/project-33.jpg"class=""> -->
