--- a/index.html
+++ b/index.html
@@ -135,7 +135,10 @@
 							<a href="https://github.com/MeTushar"><i class="fa fa-github-square fa-2x"></i></a>
 							<a href=""><i class="fa fa-google-plus-square fa-2x"></i></a>
 							</div>
-							<a type="button" class="btn btn-lg btn-primary">Learn More</a>
+							<a type="button" class="btn btn-lg btn-primary btn-overlay">Learn More</a>
+							 <div class="info-overlay overlay-hide">
+							    <div class="close btn-close"><img src="img/close.png" alt=""></div>
+							  </div>
 							<a type="button" href="#contact" class="btn btn-lg btn-default">Get In Touch</a>
 							<div class="down-button">
 								<a href="#about" class="btn down-arrow">
@@ -280,24 +283,7 @@
 							</div>
 							<!-- <img src="img/project-33.jpg"class=""> -->
 						</div>
-						<div class="col-sm-6 col-md-3">
-							<div class="portfolio-inner" style="background: #84dcc6;">
-							<div class="work"></div>
-							<div class="overlay" >
-								<a href="" class="btn btn-primary btn-attached"><i class="fa fa-link"></i></a>
-							</div>
-							</div>
-							<!-- <img src="img/project-33.jpg"class=""> -->
-						</div>
-						<div class="col-sm-6 col-md-3">
-							<div class="portfolio-inner" style="background: #84dcc6;">
-							<div class="work"></div>
-							<div class="overlay" >
-								<a href="" class="btn btn-primary btn-attached"><i class="fa fa-link"></i></a>
-							</div>
-							</div>
-							<!-- <img src="img/project-33.jpg"class=""> -->
-						</div>
+						
 					</div>
 				</div>
 			</div>
@@ -307,11 +293,11 @@
 			<div class="container text-center">
 				<div class="row contact-heading">
 					<div class="col-xs-12 ">
-						<h3>Contact Us</h3>
+						<h3>Contact</h3>
 					</div>
 				</div>
 				<div class="row title-row contact-form">
-					<div class="col-xs-12 ">
+					<!-- <div class="col-xs-12 ">
 						<h4>SEND US A MESSAGE</h4>
 						<div class="col-sm-6 contact-input">
 							<div class="form-group wow fadeInLeft">
@@ -328,11 +314,32 @@
 							<textarea class="form-control" rows="5" placeholder= "Your question"></textarea>
 						</div>
 					</div>
-				</div>
-				<div class="row contact-form">
+									</div>
+									<div class="row contact-form">
 					<div class="col-xs-12 text-right wow fadeInLeft">
 						<button type="button" class="btn btn-md btn-primary">Send</button>
 					</div>
+					</div> -->
+				<div class="col-xs-12 text-center">
+					<div class="col-md-4 col-sm-6 col-xs-12">
+						<div class="contact-inner">
+						<h4>Address</h4>
+						<p>BTM 2nd stage, Bangalore</p>
+						</div>
+					</div>
+					<div class="col-md-4 col-sm-6 col-xs-12">
+						<div class="contact-inner">
+						<h4>Phone</h4>
+						<p>8867153094</p>
+						</div>
+					</div>
+					<div class="col-md-4 col-sm-6 col-xs-12">
+						<div class="contact-inner">
+						<h4>Email</h4>
+						<p>mehrotratushar@yahoo.com</p>
+						</div>
+					</div>
+					
 				</div>
 			</div>	
 		</section>
@@ -386,11 +393,19 @@
 		target: ".navbar",
 		offset: 160
 	});
-	$("nav a, .down-arrow, a.brand, a.btn-default").bind("click", function(){
+	$("nav li a, .down-arrow, a.brand, a.btn-default").bind("click", function(){
 		$("html, body").stop().animate({
 				scrollTop: $($(this).attr("href")).offset().top-55
 		},1500,'easeInOutExpo');
 		event.preventDefault();
+	});
+	$(".btn-overlay").on("click",function(){
+	  $(".btn-close").show();
+	  $(this).siblings("div.info-overlay").addClass("overlay-open").removeClass("overlay-hide");
+	  
+	});
+	$(".info-overlay>.btn-close").on("click",function(){
+	  $(this).hide().parent(".info-overlay").addClass("overlay-hide").removeClass("overlay-open");
 	});
 	new WOW().init();
 	</script>
