--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 					<div class="row title-row">
 						<div class="col-xs-12 text-center">
 							<h3>Tushar Mehrotra</h3>
-							<p>Frontend Develper. Building at <a href="#">ThoughtFocus Technologies</a>.Previously at <a href="#">KapGan Technologies</a></p>
+							<p>Frontend Developer. Building at <a href="#">ThoughtFocus Technologies</a>.Previously at <a href="#">KapGan Technologies</a></p>
 							<div class="icon">
 							<a href=""><i class="fa fa-facebook-square fa-2x"></i></a>
 							<a href="http://codepen.io/MTushar"><i class="fa fa-codepen fa-2x"></i></a>
@@ -154,33 +154,33 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-sm-6 col-lg-4 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.5s">
+						<div class="col-sm-6 col-lg-4 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.25s">
 							<div class="skills skills-1 text-center">
 								<span>HTML5<br />70%</span>
 							</div>
 						</div>
-						<div class="col-sm-6 col-lg-4 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.75s">
+						<div class="col-sm-6 col-lg-4 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.5s">
 							<div class="skills skills-2 text-center">
 								<span>CSS3<br />70%</span>
 							</div>
 						</div>
-						<div class="col-sm-6 col-lg-4 wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
+						<div class="col-sm-6 col-lg-4 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.75s">
 							<div class="skills skills-3 text-center">
 								<span>Bootstrap3<br />90%</span>
 							</div>
 						</div>
 					
-						<div class="col-sm-6 col-lg-4 wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.25s">
+						<div class="col-sm-6 col-lg-4 wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
 							<div class="skills skills-4 text-center">
 								<span>Javascript<br />60%</span>
 							</div>
 						</div>
-						<div class="col-sm-6 col-lg-4 wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.5s">
+						<div class="col-sm-6 col-lg-4 wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.25s">
 							<div class="skills skills-5 text-center">
 								<span>jQuery<br />85%</span>
 							</div>
 						</div>
-						<div class="col-sm-6 col-lg-4 wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.75s">
+						<div class="col-sm-6 col-lg-4 wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.5s">
 							<div class="skills skills-6 text-center">
 								<span>Less<br />80%</span>
 							</div>
@@ -444,10 +444,11 @@
 		target: ".navbar",
 		offset: 160
 	});
-	$("nav li a, .down-arrow, a.brand, a.btn-default").bind("click", function(){
+	$("nav li a, .down-arrow, a.brand, a.btn-default").bind("click", function(event){
 		$("html, body").stop().animate({
 				scrollTop: $($(this).attr("href")).offset().top-55
 		},1500,'easeInOutExpo');
+		$(this).parents(".navbar-collapse ").removeClass("in");
 		event.preventDefault();
 	});
 	$(".btn-overlay").on("click",function(){
@@ -470,6 +471,7 @@
 	      $(".info-overlay .inner-resume>div:first-child").addClass("text-left").siblings("div").addClass("text-right");
 	    }
 	}
+	
 	new WOW().init();
 	</script>
 </body>
