--- a/index.html
+++ b/index.html
@@ -15,32 +15,7 @@
 	<link rel="stylesheet" href="css/owl.theme.css">
 	<link rel="stylesheet" href="css/style.css">
 	<style>
-		.pageLoader {
-		    position: fixed;
-		    top: 0;
-		    bottom: 0;
-		    left: 0;
-		    right: 0;
-		    background-color: #000000;
-		    opacity: 0.9;
-		    z-index: 9999;
-		    text-align: center;
-		    width: 100%;
-		    padding-top: 18%;
-		}
-		#myProgress {
-		  width: 60%;
-		  margin:0 auto;
-		  height: 30px;
-		  position: relative;
-		  border: 1px solid #ccc;
-		}
-		#myBar {
-		  width: 1px;
-		  height: 100%;
-		  position: absolute;
-		  background-color: #07ad87;
-		}
+		
 		.portfolio-inner{
 			height: 200px;
 		    margin: 10px auto;
@@ -123,7 +98,7 @@
 					<div class="row title-row">
 						<div class="col-xs-12 text-center">
 							<h3>Tushar Mehrotra</h3>
-							<p>Frontend Developer. Building at <a href="#">ThoughtFocus Technologies</a>.Previously at <a href="#">KapGan Technologies</a></p>
+							<p>Frontend Developer. Working in <a href="#">ThoughtFocus Technologies</a>.Previously worked at <a href="#">KapGan Technologies</a></p>
 							<div class="icon">
 							<a href=""><i class="fa fa-facebook-square fa-2x"></i></a>
 							<a href="http://codepen.io/MTushar"><i class="fa fa-codepen fa-2x"></i></a>
@@ -150,7 +125,7 @@
 				<div class="container">
 					<div class="row contact-heading">
 						<div class="col-xs-12 text-center">
-							<h3>Skills</h3>
+							<h3 class="headerline">Skills</h3>
 						</div>
 					</div>
 					<div class="row">
@@ -198,7 +173,7 @@
 						<div class="col-xs-12 text-center">
 							<div class="row contact-heading">
 								<div class="col-xs-12 text-center">
-									<h3>Work</h3>
+									<h3 class="headerline">Work</h3>
 								</div>
 							</div>
 							<div class="col-sm-6">
@@ -232,7 +207,7 @@
 					<div class="col-xs-12 text-center">
 						<div class="row contact-heading">
 							<div class="col-xs-12 text-center">
-								<h3 class="portfolio">Portfolio</h3>
+								<h3 class="portfolio headerline">Portfolio</h3>
 							</div>
 						</div>
 						<div class="col-sm-6 col-md-3 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.5s">
@@ -283,7 +258,7 @@
 			<div class="container text-center">
 				<div class="row contact-heading">
 					<div class="col-xs-12 ">
-						<h3>Contact</h3>
+						<h3 class="headerline">Contact</h3>
 					</div>
 				</div>
 				<div class="row title-row contact-form">
