colors updated for website

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 					<div class="row title-row">
 						<div class="col-xs-12 text-center">
 							<h3>Tushar Mehrotra</h3>
-							<p>Frontend Developer. Working in <a href="#">ThoughtFocus Technologies</a>.Previously worked at <a href="#">KapGan Technologies</a></p>
+							<p>Front-end Developer. Working in <a href="#">Unbxd Inc.</a> Previously worked at <a href="#">ThoughtFocus Technologies</a></p>
 							<div class="icon">
 							<a href=""><i class="fa fa-facebook-square fa-2x"></i></a>
 							<a href="http://codepen.io/MTushar"><i class="fa fa-codepen fa-2x"></i></a>
@@ -160,6 +160,16 @@
 								<span>Less<br />80%</span>
 							</div>
 						</div>
+						<div class="col-sm-6 col-lg-4 wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.5s">
+							<div class="skills skills-7 text-center">
+								<span>Sass<br />60%</span>
+							</div>
+						</div>
+						<div class="col-sm-6 col-lg-4 wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.5s">
+							<div class="skills skills-8 text-center">
+								<span>React JS<br />50%</span>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -180,16 +190,14 @@
 								<div id="owl-demo" class="owl-carousel">
 								  <div>
 								  	<h4>Software Engineer</h4>
-                                    <p class="subHeading"><i class="fa1 fa fa-bookmark"></i> KapganTech <i class="fa2 fa fa-calendar"></i> 2013 - 2014</p>
-                                    <p>I worked on an e-learning site. My work is to develop webpages using frontend technologies. Technologies i have used are HTML, HTML5, CSS, CSS3, jQuery, Javascript, Bootstrap3.</p>
+                                    <p class="subHeading"><i class="fa1 fa fa-bookmark"></i> ThoughtFocus technologies <i class="fa2 fa fa-calendar"></i> 2015 - 2016</p>
+                                    <p>I worked on an e-learning site. My work is to develop webpages using frontend technologies. Technologies I have used are HTML, HTML5, CSS, CSS3, jQuery, Javascript, Bootstrap3</p>
 								  </div>
 								  <div>
 								  	<h4>Software Engineer</h4>
-                                    <p class="subHeading"><i class="fa1 fa fa-bookmark"></i> ThoughtFocus technologies <i class="fa2 fa fa-calendar"></i> 2015 - till now</p>
-                                    <p>I am working on an ecommerce website. My work is to develop webpages using frontend technologies. Technologies i have used are HTML, HTML5, CSS, CSS3, jQuery, Javascript, Bootstrap3, Less, Grunt.</p>
+                                    <p class="subHeading"><i class="fa1 fa fa-bookmark"></i> Unbxd Inc <i class="fa2 fa fa-calendar"></i> 2016 - Till Now</p>
+                                    <p>I am working on frontend screens for our search & navigation product. Technologies I am using are HTML5, CSS3, jQuery, Javascript, Bootstrap3, Sass</p>
 								  </div>
-								  
-								 
 								</div>
 							</div>
 							<div class="col-sm-6 hidden-xs">
