--- a/index.html
+++ b/index.html
@@ -336,13 +336,13 @@
 							    		<div class="col-sm-9 text-right">
 							    			<div class="row">
 								    			<div class="col-md-12">
-								    			<h4>Kapgan technologies(2013-2014)</h4>
+								    			<h4>Unbxd Softwares(April 2016-till now)</h4>
 								    			<h5>Software Engineer</h5>
 								    			</div>
 							    			</div>
 							    			<div class="row">
 								    			<div class="col-md-12">
-								    			<h4>ThoughtFocus technologies(2015-till now)</h4>
+								    			<h4>ThoughtFocus technologies(Jan 2015- April 2016)</h4>
 								    			<h5>Software Engineer</h5>
 								    			</div>
 							    			</div>
